--- a/_data/code/eccc.yml
+++ b/_data/code/eccc.yml
@@ -8,24 +8,31 @@ releases:
       fr: METRo
     version: 3.3.2
     dateUpdated: 2017-10-07
-    desc:
+    description:
       en: The Model of the Environment and Temperature of Roads (METRo) is a road forecast software.
       fr: Le Modèle de l'Environnement et de la Température de la Route (METRo) est un logiciel de prévision de la température de la route.
     repositoryURL:
       en: https://framagit.org/metroprojects/metro
       fr: https://framagit.org/metroprojects/metro
     vcs: git
-    licenses:
+    permissions:
+      licenses:
       - name: GPLv2
         URL:
           en: https://framagit.org/metroprojects/metro/blob/master/LICENSE
-          fr:
+          fr: https://framagit.org/metroprojects/metro/blob/master/LICENSE
+      usageType:
+        - openSource
     tags:
-      - Environment
-      - Temperature
-      - Roads
+      en:
+        - Environment
+        - Temperature
+        - Roads
+      fr:
+        - Environnement
+        - Température
+        - Routes
     contact:
-      name: 
       email: metro@ec.gc.ca
     languages:
       - Python
