--- a/docs/_data/code/asc-csa.yml
+++ b/docs/_data/code/asc-csa.yml
@@ -8,23 +8,29 @@ releases:
       fr: Apogy
     version: 0.5.14
     dateUpdated: 2016-11-08
-    desc:
+    description:
       en: The one-stop-shop solution for operating robots, satellites and beyond
       fr: Un logiciel polyvalent pour faire fonctionner des robots et des satellites
     repositoryURL:
       en: https://bitbucket.org/apogy/ca.gc.asc_csa.apogy
       fr: https://bitbucket.org/apogy/ca.gc.asc_csa.apogy
     vcs: git
-    licenses:
-      - name: EPLv1
-        URL:
-          en: https://bitbucket.org/apogy/ca.gc.asc_csa.apogy/src/747025c088c08234105d84ebbf931b2d3100bcea/License-en.txt
-          fr: https://bitbucket.org/apogy/ca.gc.asc_csa.apogy/src/747025c088c08234105d84ebbf931b2d3100bcea/License-fr.txt
+    permissions:
+      licenses:
+        - name: EPLv1
+          URL:
+            en: https://bitbucket.org/apogy/ca.gc.asc_csa.apogy/src/747025c088c08234105d84ebbf931b2d3100bcea/License-en.txt
+            fr: https://bitbucket.org/apogy/ca.gc.asc_csa.apogy/src/747025c088c08234105d84ebbf931b2d3100bcea/License-fr.txt
+      usageType:
+        - openSource
     tags:
-      - Robots
-      - Space
+      en:
+        - Robots
+        - Space
+      fr:
+        - Robots
+        - Espace
     contact:
-      name: 
       email: apogy@asc-csa.gc.ca
     languages:
       - Java
