--- a/docs/_data/code/eccc.yml
+++ b/docs/_data/code/eccc.yml
@@ -1,7 +1,4 @@
-name:
-  en: Environment and Climate Change Canada
-  fr: Environnement et Changement climatique Canada
-
+deptCode: eccc
 releases:
   - name:
       en: METRo
