--- a/_data/ministeres-departments.yml
+++ b/_data/ministeres-departments.yml
@@ -12,3 +12,8 @@
   name:
     en: Environment and Climate Change Canada
     fr: Environnement et Changement climatique Canada
+
+- code: abc-def
+  name:
+    en: Example
+    fr: Exemple
