--- a/docs/_data/code/eccc.yml
+++ b/docs/_data/code/eccc.yml
@@ -1,35 +1,38 @@
+--- 
 deptCode: eccc
-releases:
-  - name:
+releases: 
+  - 
+    contact: 
+      email: metro@ec.gc.ca
+    date: 
+      metadataLastUpdated: "2017-10-07"
+    description: 
+      en: "The Model of the Environment and Temperature of Roads (METRo) is a road forecast software."
+      fr: "Le Modèle de l'Environnement et de la Température de la Route (METRo) est un logiciel de prévision de la température de la route."
+    languages: 
+      - Python
+    name: 
       en: METRo
       fr: METRo
-    version: 3.3.2
-    dateUpdated: 2017-10-07
-    description:
-      en: The Model of the Environment and Temperature of Roads (METRo) is a road forecast software.
-      fr: Le Modèle de l'Environnement et de la Température de la Route (METRo) est un logiciel de prévision de la température de la route.
-    repositoryURL:
-      en: https://framagit.org/metroprojects/metro
-      fr: https://framagit.org/metroprojects/metro
-    vcs: git
-    permissions:
-      licenses:
-      - name: GPLv2
-        URL:
-          en: https://framagit.org/metroprojects/metro/blob/master/LICENSE
-          fr: https://framagit.org/metroprojects/metro/blob/master/LICENSE
-      usageType:
-        - openSource
-    tags:
-      en:
+    permissions: 
+      licenses: 
+        - 
+          URL: 
+            en: "https://framagit.org/metroprojects/metro/blob/master/LICENSE"
+            fr: "https://framagit.org/metroprojects/metro/blob/master/LICENSE"
+          name: GPLv2
+    repositoryURL: 
+      en: "https://framagit.org/metroprojects/metro"
+      fr: "https://framagit.org/metroprojects/metro"
+    tags: 
+      en: 
         - Environment
         - Temperature
         - Roads
-      fr:
+      fr: 
         - Environnement
         - Température
         - Routes
-    contact:
-      email: metro@ec.gc.ca
-    languages:
-      - Python
+    vcs: git
+    version: "3.3.2"
+
