Add Filter for organizations

--- a/_data/code/federal/tbs-sct.yml
+++ b/_data/code/federal/tbs-sct.yml
@@ -122,7 +122,7 @@ releases:
           URL: 
             en: "#"
             fr: "#"
-          name: NoLicence
+          name: ""
     relatedCode: 
       - 
         URL: "https://github.com/ckan/ckan"
