Add Devex from BC

--- a/_data/administrations/provincial.yml
+++ b/_data/administrations/provincial.yml
@@ -1,9 +1,14 @@
+- code: bc
+  name:
+    en: Province of British Columbia
+    fr: Province de la Colombie-Britannique
+
 - code: on
   name:
-    en: Ontario
-    fr: Ontario
+    en: Province of Ontario
+    fr: Province de l'Ontario
 
 - code: qc
   name:
-    en: Quebec
-    fr: Québec
+    en: Province of Quebec
+    fr: Province de Québec
