--- a/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
+++ b/_data/logiciels_libres-open_source_software/notepad-plus-plus.yml
@@ -1,54 +1,38 @@
-name:
+--- 
+description: 
+  en: "Text editor and Notepad replacement that runs in the Windows environment."
+  fr: "Éditeur de textes et remplacement pour Notepad qui fonctionne dans l'environement Windows."
+homepageURL: 
+  en: "https://notepad-plus-plus.org"
+  fr: "https://notepad-plus-plus.org/fr"
+licenses: 
+  - GPLv2
+name: 
   en: Notepad++
   fr: Notepad++
-description:
-  en: Text editor and Notepad replacement that runs in the Windows environment.
-  fr: Éditeur de textes et remplacement pour Notepad qui fonctionne dans l'environement Windows.
-homepageURL:
-  en: https://notepad-plus-plus.org
-  fr: https://notepad-plus-plus.org/fr
-licenses:
-  - name: GPLv2
-    URL:
-      en: https://github.com/notepad-plus-plus/notepad-plus-plus/blob/master/LICENSE
-      fr: https://github.com/notepad-plus-plus/notepad-plus-plus/blob/master/LICENSE
-tags:
-  en:
+tags: 
+  en: 
     - Desktop
     - Productivity
-    - Text editor
-  fr:
-    - Poste de travail
+    - "Text editor"
+  fr: 
+    - "Poste de travail"
     - Productivité
-    - Éditeur texte
+    - "Éditeur texte"
+admininstrations: 
+  - 
+    adminCode: tbs-sct
+    uses: 
+      - 
+        contact: 
+          email: desktop@tbs-sct.gc.ca
+        dateSince: ~
+        description: 
+          en: "Must be requested"
+          fr: "Doit être demandé"
+        name: 
+          en: "Available to all employees"
+          fr: "Disponible pour tous les employés"
+        users: 
+          - employees
 
-uses:
-  - adminCode: tbs-sct
-    users:
-      - everyone
-    nbUsers: 50
-    contact:
-      email: desktop@tbs-sct.gc.ca
-    version: multiple
-    upgradePolicy:
-    notes:
-      en:
-      fr:
-    date:
-      created: 2018-01-23
-      lastModified: 2018-01-23
-
-  - adminCode: abc-def
-    users:
-      - developers
-    nbUsers: 100
-    contact:
-      email: contact@abc-def.gc.ca
-    version: 7.5.4
-    upgradePolicy: latest
-    notes:
-      en:
-      fr:
-    date:
-      created: 2018-01-23
-      lastModified: 2018-01-02
