README - how to add data

--- a/_data_templates/ll-oss_mandatory.yml
+++ b/_data_templates/ll-oss_mandatory.yml
@@ -26,5 +26,5 @@ admininstrations:
           en: "Example use"
           fr: "Exemple d'utilisation"
         description: 
-          en: "Etiam rutrum, tellus nec egestas blandit, dolor purus fringilla nulla, vel sodales turpis justo volutpat ante."
+          en: "Etiam rutrum, tellus nec egestas blandit."
           fr: "Vestibulum fringilla vel purus nec iaculis."
