Add Devex use by PCO. Fix bug displaying licence

--- a/_data/administrations/federal.yml
+++ b/_data/administrations/federal.yml
@@ -12,3 +12,8 @@
   name:
     en: Environment and Climate Change Canada
     fr: Environnement et Changement climatique Canada
+
+- code: pco-bcp
+  name:
+    en: Privy Council Office
+    fr: Bureau du Conseil privé
