Add GAC under federal administration.

--- a/_data/administrations/federal.yml
+++ b/_data/administrations/federal.yml
@@ -22,3 +22,9 @@
   name:
     en: Privy Council Office
     fr: Bureau du Conseil privé
+
+- code: gac-anc
+  name:
+    en: Global Affairs Canada
+    fr: Affaires mondiales Canada
+
