Fix french acronym for GAC.

--- a/_data/administrations/federal.yml
+++ b/_data/administrations/federal.yml
@@ -23,7 +23,7 @@
     en: Privy Council Office
     fr: Bureau du Conseil privé
 
-- code: gac-anc
+- code: gac-amc
   name:
     en: Global Affairs Canada
     fr: Affaires mondiales Canada
